<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnuBookmarks"
        android:enabled="true"
        android:icon="@drawable/bookmarks"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mnuLayers"
        android:enabled="true"
        android:icon="@drawable/ic_layers_white"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mnuOpenWebScene"
        android:enabled="true"
        android:visible="true"
        android:icon="@drawable/folder_open"
        android:title="@string/tb_btn_open_webscene"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mnuTapAction"
        android:icon="@drawable/ic_touch_action"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/mnuTapMeasure"
                android:enabled="true"
                android:icon="@drawable/ic_measure"
                android:title="@string/tb_btn_tap_measure"
                android:visible="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/mnuTapLineOfSight"
                android:title="@string/tb_btn_tap_line_of_sight"
                android:enabled="true"
                android:visible="true"
                android:icon="@drawable/eye_outline"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/mnuTapViewshed"
                android:title="@string/tb_btn_tap_viewshed"
                android:enabled="true"
                android:visible="true"
                android:icon="@drawable/terrain"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/mnuTapStandardNavigation"
                android:title="@string/tb_btn_tap_standard_navigation"
                android:enabled="true"
                android:visible="true"
                android:icon="@drawable/ic_touch_action"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/mnuTapSensorNavigation"
                android:title="@string/tb_btn_tap_sensor_navigation"
                android:enabled="true"
                android:visible="true"
                android:icon="@drawable/sensor_navigation"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/mnuPivotLock"
                android:title="@string/tb_btn_pivot_lock"
                android:enabled="true"
                android:visible="true"
                android:icon="@drawable/ic_pivot_lock_white"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/mnuGpsLoc"
                android:enabled="true"
                android:icon="@drawable/gps_fixed"
                android:title="@string/tb_btn_gpsloc"
                android:visible="false"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/mnuCleanupGraphics"
                android:enabled="true"
                android:visible="true"
                android:title="@string/tb_btn_remove_graphics"
                android:icon="@drawable/ic_clear_white_gray"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>